:label: 도메인 모델링

--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "domain",
+  "name": "@snackyoo/domain",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "types": "src/index.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
